// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error groups detailed statistics when data is loaded returns the correct data 1`] = `
Object {
  "groupId": "1f716bc1e7234ff5119ac615d1b90b6e",
  "timeseries": Array [
    Object {
      "x": 1627973400000,
      "y": 0,
    },
    Object {
      "x": 1627973460000,
      "y": 0,
    },
    Object {
      "x": 1627973520000,
      "y": 0,
    },
    Object {
      "x": 1627973580000,
      "y": 0,
    },
    Object {
      "x": 1627973640000,
      "y": 0,
    },
    Object {
      "x": 1627973700000,
      "y": 0,
    },
    Object {
      "x": 1627973760000,
      "y": 0,
    },
    Object {
      "x": 1627973820000,
      "y": 0,
    },
    Object {
      "x": 1627973880000,
      "y": 0,
    },
    Object {
      "x": 1627973940000,
      "y": 0,
    },
    Object {
      "x": 1627974000000,
      "y": 0,
    },
    Object {
      "x": 1627974060000,
      "y": 0,
    },
    Object {
      "x": 1627974120000,
      "y": 0,
    },
    Object {
      "x": 1627974180000,
      "y": 0,
    },
    Object {
      "x": 1627974240000,
      "y": 0,
    },
    Object {
      "x": 1627974300000,
      "y": 0,
    },
    Object {
      "x": 1627974360000,
      "y": 0,
    },
    Object {
      "x": 1627974420000,
      "y": 0,
    },
    Object {
      "x": 1627974480000,
      "y": 0,
    },
    Object {
      "x": 1627974540000,
      "y": 0,
    },
    Object {
      "x": 1627974600000,
      "y": 1,
    },
    Object {
      "x": 1627974660000,
      "y": 0,
    },
    Object {
      "x": 1627974720000,
      "y": 0,
    },
    Object {
      "x": 1627974780000,
      "y": 0,
    },
    Object {
      "x": 1627974840000,
      "y": 0,
    },
    Object {
      "x": 1627974900000,
      "y": 0,
    },
    Object {
      "x": 1627974960000,
      "y": 0,
    },
    Object {
      "x": 1627975020000,
      "y": 0,
    },
    Object {
      "x": 1627975080000,
      "y": 0,
    },
    Object {
      "x": 1627975140000,
      "y": 0,
    },
    Object {
      "x": 1627975200000,
      "y": 0,
    },
  ],
}
`;

exports[`APM API tests basic apm_8.0.0 Error groups detailed statistics when data is loaded with previous data returns the correct data returns correct timeseries 1`] = `
Object {
  "groupId": "1f716bc1e7234ff5119ac615d1b90b6e",
  "timeseries": Array [
    Object {
      "x": 1627974300000,
      "y": 0,
    },
    Object {
      "x": 1627974360000,
      "y": 0,
    },
    Object {
      "x": 1627974420000,
      "y": 0,
    },
    Object {
      "x": 1627974480000,
      "y": 0,
    },
    Object {
      "x": 1627974540000,
      "y": 0,
    },
    Object {
      "x": 1627974600000,
      "y": 1,
    },
    Object {
      "x": 1627974660000,
      "y": 0,
    },
    Object {
      "x": 1627974720000,
      "y": 0,
    },
    Object {
      "x": 1627974780000,
      "y": 0,
    },
    Object {
      "x": 1627974840000,
      "y": 0,
    },
    Object {
      "x": 1627974900000,
      "y": 0,
    },
    Object {
      "x": 1627974960000,
      "y": 0,
    },
    Object {
      "x": 1627975020000,
      "y": 0,
    },
    Object {
      "x": 1627975080000,
      "y": 0,
    },
    Object {
      "x": 1627975140000,
      "y": 0,
    },
    Object {
      "x": 1627975200000,
      "y": 0,
    },
  ],
}
`;
